syntax = "proto3";

package lottery;
option go_package = "github.com/yourusername/lottery/pb";

message LotteryRequest {
    string user_id = 1;
}

message LotteryResponse {
    bool win = 1;
    string message = 2;
}

service LotteryService {
    rpc EnterLottery (LotteryRequest) returns (LotteryResponse);
}
